@@ -16,15 +16,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.release>21</java.release>
-        <java.enable-preview>--enable-preview</java.enable-preview>
+        <java.release>24</java.release>
 
         <!-- Dependencies -->
         <slf4j.version>2.0.12</slf4j.version>
         <junit.version>5.11.4</junit.version>
         <assertj-core.version>3.26.3</assertj-core.version>
         <mockito.version>5.14.2</mockito.version>
-        <pragmatica.version>0.7.9</pragmatica.version>
+        <pragmatica.version>0.7.17</pragmatica.version>
         <awaitility.version>4.2.1</awaitility.version>
         <tinylog.version>2.7.0</tinylog.version>
         <netty.version>4.2.0.Final</netty.version>
@@ -151,7 +150,6 @@
                         <source>${java.release}</source>
                         <target>${java.release}</target>
                         <compilerArgs>
-                            <arg>${java.enable-preview}</arg>
                             <arg>-proc:full</arg>
                         </compilerArgs>
                     </configuration>
@@ -161,7 +159,6 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.5.1</version>
                     <configuration>
-                        <argLine>${java.enable-preview}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
